--- a/WebLapTop/WebLapTop/Views/Shared/_Layout.cshtml
+++ b/WebLapTop/WebLapTop/Views/Shared/_Layout.cshtml
@@ -105,14 +105,14 @@
                     <!-- SEARCH BAR -->
                     <div class="col-md-6">
                         <div class="header-search">
-                            <form>
+                            <form asp-controller="Search" asp-action="Search"method="get">
                                 @*<select class="input-select">
                                         <option value="0">All Categories</option>
                                         <option value="1">Category 01</option>
                                         <option value="1">Category 02</option>
                                     </select>*@
-                                <input class="input" placeholder="Search here" style="margin-left: 160px;">
-                                <button class="search-btn">Search</button>
+                                <input class="input"name="SearchString" value="@ViewData["CurrentFilter"]" placeholder="Nhập thông tin tìm kiếm" style="margin-left: 160px;">
+                                <button class="search-btn"type="submit">Search</button>
                             </form>
                         </div>
                     </div>
