--- a/WebLapTop/WebLapTop/Areas/Admin/Views/Baiviet/Create.cshtml
+++ b/WebLapTop/WebLapTop/Areas/Admin/Views/Baiviet/Create.cshtml
@@ -19,7 +19,7 @@
             <h4 class="card-title">Thêm bài viết</h4>
         </div>
         <div class="card-content">
-            <div class="card-body">
+            <div class="card-body" style=" padding: 25px;">
                 <form asp-action="Create" enctype="multipart/form-data">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="col-md-3">
