--- a/WebLapTop/WebLapTop/Areas/Admin/Views/Nhanvien/Details.cshtml
+++ b/WebLapTop/WebLapTop/Areas/Admin/Views/Nhanvien/Details.cshtml
@@ -4,63 +4,59 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
 
-<div>
-    <h4>Nhanvien</h4>
+<div style=" padding: 25px;">
+    <h1 >Details</h1>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HoVaTen)
+    <dl class="row" >
+        <dt class="col-sm-2" >
+            Họ và tên
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.HoVaTen)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SoDienThoai)
+        <dt class="col-sm-2">
+            Số điện thoại
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.SoDienThoai)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
+        <dt class="col-sm-2">
+            Email
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Email)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AnhDaiDien)
+        <dt class="col-sm-2">
+            Ảnh đại diện
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AnhDaiDien)
+        <dd class="col-sm-10">
+            <img src="~/anhNV/@Html.DisplayFor(model => model.AnhDaiDien)" style="width:150px" alt="">
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TenDangNhap)
+        <dt class="col-sm-2">
+            Tên đăng nhập
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TenDangNhap)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.MatKhau)
+
+        <dt class="col-sm-2">
+            Quyền
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MatKhau)
+        <dd class="col-sm-10">
+            @if (Model.Quyen == 1)
+            {
+                <span class="badge badge-danger" style="color:red; font-weight:bold">Quản lý</span>
+            }
+            else
+            {
+                <span class="badge badge-warning" style="color:black;font-weight:bold">Nhân viên</span>
+            }
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.XacNhanMatKhau)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.XacNhanMatKhau)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Quyen)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Quyen)
-        </dd>
+
     </dl>
 </div>
-<div>
+<div  style=" padding: 25px;">
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
